--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,18 @@
+@font-face {
+  font-family: "General-Sans";
+  src: url("./fonts/GeneralSans-Variable.ttf");
+}
+
 :root{
-  --color-bg: #1f1f38;
-  --color-bg-variant : #2c2c6c;
-  --color-primary: #4db5ff;
-  --color-primary-variant: rgba(77, 181, 255, 0.4);
+  --color-bg: #000;
+  --color-blue : #007FFF;
+  --color-yellow: #FFD700;
+  --color-green: #00ff82;
+  --color-light: #888888;
+  --color-grey: #5f5f5f;
+  --color-red: #ef3c1f;
+  --color-orange: #f09c09;
   --color-white: #fff;
-  --color-light: rgba(255, 255, 255, 0.6);
 
   --transition: all 400ms ease;
 }
@@ -18,16 +26,37 @@ html{
 
 body {
   margin: 3rem 7rem;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'General-Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: black;
-  color: white;
+  background-color: var(--color-bg);
+  color: var(--color-white);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  body {
+    margin: 1rem 1rem;
+  }
 }
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  body {
+    margin: 1.2rem 1.2rem;
+  }
+}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 700px) {
+  body {
+    margin: 2.5rem 2.5rem;
+  }
+}
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 900px) {
+  body {
+    margin: 3rem 5rem;
+  }
+}
+
